hphp/test/zend/good/ext/session/tests/bug38377.php
<?php
session_start();
session_regenerate_id();
session_destroy();
echo "Done\n";
?>