hphp/test/zend/bad/errmsg_041.php
<?php

var_dump("abc" instanceof stdclass);

echo "Done\n";
?>